# 3d.directory

./: README.md  export_excel.py  manufacturers.csv  manufacturers.xlsx  manufacturers_checked.csv  manufacturers_checked2.csv  pyproject.toml  requirements.txt
outputs/: manufacturers.csv  manufacturers.xlsx  manufacturers_checked.csv
printing_directory/: browser_check_manufacturers_website.py  export_excel.py  get_websites.py  main.py  request_check_manufacturers_website.py
