[tool.poetry]
name = "printing-directory"
version = "0.1.0"
description = ""
authors = ["rafaeldecarvalho <rafaeldecarvalho.ps@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hrequests = {extras = ["all"], version = "^0.9.2"}
xmltodict = "^0.14.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
beautifulsoup4 = "^4.13.3"
xlsxwriter = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
